--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "fs": "0.0.1-security",
+    "mocha": "^10.0.0",
     "read-excel-file": "^5.4.4"
   }
 }
