--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "vian",
   "license": "ISC",
   "dependencies": {
     "fs": "0.0.1-security",
-    "mocha": "^10.0.0",
     "read-excel-file": "^5.4.4"
-  }
+  },
+  "devDependencies": {}
 }
